# cpp_kata_template

./: .gitignore  CMakeLists.txt  README.md  calculator.cpp  calculator.h  calculatorTest.cpp
